# LeadSniper

./: .changelog_internal.md  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  cold_email_engine.py  convert_leads.py  fresh_gig_scanner.py  gig3_deliverable_sample.json  gig3_outreach_leads.py  github_lead_scraper.py  leadsniper.py  leadsniper_fast.py  portfolio.html  pyproject.toml  requirements.txt  revenue_blitz.py
.github/workflows/: ci.yml
tests/: test_email_engine.py  test_scraper.py
